[package]
name = "todomvc"
version = "0.1.0"
authors = ["Benjamin Lee <bnllee@ucdavis.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Set crate-type to cydlib to compile to wasm32-unknown-unknown.
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.48"
# Logs panics to `console.error` to help with debugging.
console_error_panic_hook = "0.1.6"
# Bindings to JavaScript's standard, built-in objects, including their methods and properties.
js-sys = "0.3.25"

# web-sys offers conditional features, so they are added manually here.
[dependencies.web-sys]
version = "0.3.25"
features = [
    'Window',
    'Storage', # required for the function Window::local_storage
    'EventTarget', # used in view.rs for callbacks
    'Document',
    'Location', # used for the function Document::location
    'HtmlElement', # used for the function Document::body
    'Element',
]
